force-app/main/default/objects/Financial_Record__c/Financial_Record__c.object-meta.xml
<CustomObject>
    <label>Financial Record</label>
    <nameField>
        <displayFormat>TID-{00000}-{DD}{MM}{YY}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>