force-app/main/default/objects/Financial_Record__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Financial Records</relationshipLabel>
    <relationshipName>Financial_Records</relationshipName>
    <type>Lookup</type>
</CustomField>